--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -1,1 +1,8 @@
-<h1>Header</h1>
+<div class="inner-header">
+    <div class="brand">
+        <h1>Logo</h1>
+    </div>
+    <div class="account">
+        <a href="javascript:void(0)">Exit</a>
+    </div>
+</div>
