--- a/app/templates/pages/notifications.html
+++ b/app/templates/pages/notifications.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="inner-notifications">
+    table two
+</div>
