--- a/app/templates/pages/accounts.html
+++ b/app/templates/pages/accounts.html
@@ -1,3 +1,13 @@
 <div class="inner-accounts">
-    Table
+    <div class="tabs">
+        <ul class="inner-tabs">
+            <li><a href="#accounts/new">New</a></li>
+            <li><a href="#accounts/get">Get</a></li>
+            <li><a href="#accounts/aprove">Aprove</a></li>
+            <li><a href="#accounts/resolve">Resolve</a></li>
+        </ul>
+    </div>
+    <div id="accountContainer" class="panel">
+
+    </div>
 </div>
