update header and dashboard

--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -1,6 +1,6 @@
 <div class="inner-header">
     <div class="brand">
-        <h1>Logo</h1>
+        <h1><a href="#dashboard">Logo</a></h1>
     </div>
     <div class="account">
         <a href="javascript:void(0)">Exit</a>
