--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -1,8 +1,20 @@
-<div class="inner-header">
-    <div class="brand">
-        <h1><a href="#dashboard">Logo</a></h1>
+<div class="inner-header clearfix">
+    <div class="small-3 columns">
+        <div class="brand">
+            <h1>Logo</h1>
+            <h2 class="subheader">Company</h2>
+        </div>
     </div>
-    <div class="account">
-        <a href="javascript:void(0)">Exit</a>
+    <div class="small-6 columns">
+        <nav class="main-menu">
+            <a href="#dashboard">Dashboard</a>
+            <a href="#accounts">Accounts</a>
+            <a href="#responses">Responses</a>
+            <a href="#notifications">Notifications</a>
+        </nav>
+    </div>
+    <div class="small-3 columns">
+        <b>Login name</b>
+        <a href="javascript:viod(0)" on-click="logout">Exit</a>
     </div>
 </div>
