--- a/app/templates/pages/auth.html
+++ b/app/templates/pages/auth.html
@@ -1,3 +1,13 @@
-<div>
-    auth
+<div class="auth-form small-5 small-centered">
+    <div class="inner-form">
+        <div class="row">
+            <input type="text" placeholder="Enter your name"/>
+        </div>
+        <div class="row">
+            <input type="text" placeholder="Enter your password"/>
+        </div>
+        <div class="button-group">
+            <a href="javascript:void(0)" on-click="login">Login</a>
+        </div>
+    </div>
 </div>
