--- a/app/templates/pages/auth.html
+++ b/app/templates/pages/auth.html
@@ -7,7 +7,7 @@
             <input type="text" placeholder="Enter your password"/>
         </div>
         <div class="button-group">
-            <a href="javascript:void(0)" on-click="login">Login</a>
+            <a href="javascript:void(0)" class="button btn-info" on-click="login">Login</a>
         </div>
     </div>
 </div>
