--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -1,9 +1,11 @@
 <div class="inner-header clearfix">
     <div class="small-3 columns">
+        {{#accountToken}}
         <div class="brand">
             <h3>Logo</h3>
             <h4 class="subheader">Company</h4>
         </div>
+        {{/accountToken}}
     </div>
     <div class="small-6 columns">
         {{#accountToken}}
