--- a/app/templates/pages/auth.html
+++ b/app/templates/pages/auth.html
@@ -1,13 +1,22 @@
-<div class="auth-form small-5 small-centered">
-    <div class="inner-form">
-        <div class="row">
-            <input type="text" placeholder="Enter your name"/>
-        </div>
-        <div class="row">
-            <input type="text" placeholder="Enter your password"/>
-        </div>
-        <div class="button-group">
-            <a href="javascript:void(0)" class="button btn-info" on-click="login">Login</a>
+<div class="small-6 columns elem-login-panel-left">
+    <div class="brand-login">
+        <h3>Brand company</h3>
+        <h4 class="subheader">Description brand company</h4>
+        <div class="company-image-login"></div>
+    </div>
+</div>
+<div class="small-6 columns elem-login-panel-right">
+    <div class="auth-form small-10 small-centered">
+        <div class="inner-form">
+            <div class="row">
+                <input type="text" placeholder="Enter your name"/>
+            </div>
+            <div class="row">
+                <input type="password" placeholder="Enter your password"/>
+            </div>
+            <div class="button-group">
+                <a href="javascript:void(0)" class="button btn-info expanded" on-click="login">Login</a>
+            </div>
         </div>
     </div>
 </div>
