--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -28,6 +28,7 @@
             <div class="button-group">
                 <a href="#accounts/new" class="button btn-info">Show more ></a>
             </div>
+            <div class="js-grid"></div>
         </div>
     </div>
     <div class="small-4 columns">
