--- a/app/templates/pages/auth.html
+++ b/app/templates/pages/auth.html
@@ -9,7 +9,7 @@
     <div class="auth-form small-10 small-centered">
         <div class="inner-form">
             <div class="row">
-                <input type="text" placeholder="Enter your name"/>
+                <input id="loginInput" type="text" placeholder="Enter your name"/>
             </div>
             <div class="row">
                 <input type="password" placeholder="Enter your password"/>
