--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -1,6 +1,6 @@
 <div class="dashboard-wrapper clearfix">
     <div class="small-8 columns">
-        <div class="small-12">
+        <div class="small-11 block-component notification-component small-centered">
             <h3>Notification</h3>
             <ul>
                 <li class="callout primary">
@@ -11,16 +11,12 @@
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
                     Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
                 </li>
-                <li class="callout warning">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                </li>
             </ul>
             <div class="button-group">
                 <a href="#notifications" class="button btn-info">Show more ></a>
             </div>
         </div>
-        <div class="small-12">
+        <div class="small-11 block-component accounts-component small-centered">
             <h3>Accounts</h3>
             <div class="accounts-wrapper">
 
@@ -31,6 +27,8 @@
         </div>
     </div>
     <div class="small-4 columns">
-        <h3>History</h3>
+        <div class="small-11 block-component small-centered">
+            <h3>History</h3>
+        </div>
     </div>
 </div>
