--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -1,35 +1,65 @@
 <div class="dashboard-wrapper clearfix">
     <div class="small-8 columns">
-        <div class="small-11 block-component notification-component small-centered">
-            <h3>Notification</h3>
-            <ul>
-                <li class="callout primary">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                </li>
-                <li class="callout alert">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                </li>
-            </ul>
-            <div class="button-group">
-                <a href="#notifications" class="button btn-info">Show more ></a>
+        <div class="small-12 small-centered clearfix">
+            <div class="small-6 columns">
+                <div class="small-12 small-centered block-component notification-component">
+                    <h3>Notification</h3>
+                    <ul>
+                        <li class="callout primary">
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                        </li>
+                        <li class="callout alert">
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                        </li>
+                    </ul>
+                    <div class="button-group">
+                        <a href="#notifications" class="button btn-info">Show more ></a>
+                    </div>
+                </div>
+            </div>
+            <div class="small-6 columns">
+                <div class="small-12 small-centered block-component clearfix">
+                    <div class="small-6 columns">
+                        <h3>Average cash</h3>
+                        <div class="cash-number">
+                            <b>$345,333,198</b>
+                            <small>12% ARP, 9.45% discount</small>
+                        </div>
+                    </div>
+                    <div class="small-6 columns">
+                        <h3>Cash flow</h3>
+                        <div class="cash-number">
+                            <b>$23,119,209</b>
+                            <small>13,558 invoices</small>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="small-11 block-component accounts-component small-centered">
-            <h3>Accounts</h3>
-            <div class="accounts-wrapper">
+        <div class="small-12 small-centered clearfix">
+            <div class="small-12 columns">
+                <div class="small-12 block-component accounts-component small-centered">
+                    <h3>Accounts</h3>
+                    <div class="accounts-wrapper">
 
+                    </div>
+                    <div class="button-group">
+                        <a href="#accounts/new" class="button btn-info">Show more ></a>
+                    </div>
+                    <div class="js-grid"></div>
+                </div>
             </div>
-            <div class="button-group">
-                <a href="#accounts/new" class="button btn-info">Show more ></a>
-            </div>
-            <div class="js-grid"></div>
         </div>
     </div>
     <div class="small-4 columns">
-        <div class="small-11 block-component small-centered">
-            <h3>History</h3>
+        <div class="small-12 small-centered clearfix">
+            <div class="small-12 columns">
+                <div class="small-12 small-centered block-component">
+                    <h3>History</h3>
+                </div>
+            </div>
         </div>
     </div>
 </div>
