--- a/app/templates/pages/consumer-grid.html
+++ b/app/templates/pages/consumer-grid.html
@@ -13,7 +13,7 @@
     <tr>
         <td><input type="checkbox"></td>
         <td>{{supplierId}}</td>
-        <td><a href='#'>{{number}}</a></td>
+        <td><a href='#accounts/{{type}}/{{supplierId}}'>{{number}}</a></td>
         <td>{{money}}</td>
         <td>{{discount}}</td>
     </tr>
