--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -1,9 +1,9 @@
 <div class="dashboard-wrapper clearfix">
-    <div class="small-8 columns">
+    <div class="small-12 small-medium-12 medium-8 columns">
         <div class="small-12 small-centered clearfix">
             <div class="small-6 columns">
                 <div class="small-12 small-centered block-component notification-component">
-                    <h3>Notification</h3>
+                    <h3>Notification<div class="label-count">23</div></h3>
                     <ul>
                         <li class="callout primary">
                             Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -21,17 +21,17 @@
             </div>
             <div class="small-6 columns">
                 <div class="small-12 small-centered block-component clearfix">
-                    <div class="small-6 columns">
-                        <h3>Average cash</h3>
+                    <div class="small-12 medium-12 large-6 columns">
+                        <h3 style="text-align: center">Average cash</h3>
                         <div class="cash-number">
-                            <b>$345,333,198</b>
+                            <b>$345,333</b>
                             <small>12% ARP, 9.45% discount</small>
                         </div>
                     </div>
-                    <div class="small-6 columns">
-                        <h3>Cash flow</h3>
+                    <div class="small-12 medium-12 large-6 columns">
+                        <h3 style="text-align: center">Cash flow</h3>
                         <div class="cash-number">
-                            <b>$23,119,209</b>
+                            <b>$23,119</b>
                             <small>13,558 invoices</small>
                         </div>
                     </div>
@@ -53,11 +53,18 @@
             </div>
         </div>
     </div>
-    <div class="small-4 columns">
+    <div class="small-12 small-medium-12 medium-4 columns">
         <div class="small-12 small-centered clearfix">
             <div class="small-12 columns">
                 <div class="small-12 small-centered block-component">
                     <h3>History</h3>
+                    <div id="accountsPie" class="pie-chart-vendors">
+
+                    </div>
+
+                    <div id="discountPie" class="pie-chart-vendors">
+
+                    </div>
                 </div>
             </div>
         </div>
