1. сделал роутинг (пока выводится только строка константа)

--- a/app/templates/pages/consumer-grid.html
+++ b/app/templates/pages/consumer-grid.html
@@ -13,7 +13,7 @@
     <tr>
         <td><input type="checkbox"></td>
         <td>{{supplierId}}</td>
-        <td><a href='#account/{{accountNumber}}'>{{accountNumber}}</a></td>
+        <td><a href='#accounts/{{accountNumber}}'>{{accountNumber}}</a></td>
         <td>{{money}}</td>
         <td>{{discount}}</td>
     </tr>
