вывожу информацию о счёте (пока некрасиво)

--- a/app/templates/pages/account-info.html
+++ b/app/templates/pages/account-info.html
@@ -1,1 +1,5 @@
 <b>account info</b>
+<p>accountNumber: {{accountNumber}}</p>
+<p>supplier: {{supplierId}}</p>
+<p>money: {{money}}</p>
+<p>discount: {{discount}}</p>
