--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -11,15 +11,15 @@
     <div class="small-6 columns">
 
         <nav class="main-menu">
-            <a href="#dashboard">Dashboard</a>
-            <a href="#accounts">Accounts</a>
-            <a href="#notifications">Notifications</a>
+            <a href="#dashboard">Инфопанель</a>
+            <a href="#accounts">Счета</a>
+            <a href="#notifications">Уведомления</a>
         </nav>
 
     </div>
     <div class="small-3 columns">
-        <b class="accountName">Hello, {{loginName}}</b>
-        <a href="javascript:void(0)" on-click="logout">Exit</a>
+        <b class="accountName">Здраствуйте, {{loginName}}</b>
+        <a href="javascript:void(0)" on-click="logout">Выйти</a>
     </div>
 </div>
 {{/accountToken}}
