--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -3,36 +3,34 @@
         <div class="small-12 small-centered clearfix">
             <div class="small-6 columns">
                 <div class="small-12 small-centered block-component notification-component">
-                    <h3>Notification<div class="label-count">23</div></h3>
+                    <h3>Уведомления<div class="label-count">23</div></h3>
                     <ul>
                         <li class="callout primary">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                            Есть новые предложения от поставщиков, ожидающие подтверждения
                         </li>
                         <li class="callout alert">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                            Получено сообщение от поставщика ООО «ЗаботаПлюс»
                         </li>
                     </ul>
                     <div class="button-group">
-                        <a href="#notifications" class="button btn-info">Show more ></a>
+                        <a href="#notifications" class="button btn-info">Перейти >></a>
                     </div>
                 </div>
             </div>
             <div class="small-6 columns">
                 <div class="small-12 small-centered block-component clearfix">
                     <div class="small-12 medium-12 large-6 columns">
-                        <h3 style="text-align: center">Average cash</h3>
+                        <h3 style="text-align: center">Общая сумма выплат</h3>
                         <div class="cash-number">
-                            <b>$345,333</b>
-                            <small>12% ARP, 9.45% discount</small>
+                            <b>345,333 руб.</b>
+                            <small>13, 544 счетов</small>
                         </div>
                     </div>
                     <div class="small-12 medium-12 large-6 columns">
-                        <h3 style="text-align: center">Cash flow</h3>
+                        <h3 style="text-align: center">Прибыль</h3>
                         <div class="cash-number">
-                            <b>$23,119</b>
-                            <small>13,558 invoices</small>
+                            <b>23,119 руб.</b>
+                            <small>9,45% средняя скидка</small>
                         </div>
                     </div>
                 </div>
@@ -41,12 +39,12 @@
         <div class="small-12 small-centered clearfix">
             <div class="small-12 columns">
                 <div class="small-12 block-component accounts-component small-centered">
-                    <h3>Accounts</h3>
+                    <h3>Новые предложения</h3>
                     <div class="accounts-wrapper">
 
                     </div>
                     <div class="button-group">
-                        <a href="#accounts/new" class="button btn-info">Show more ></a>
+                        <a href="#accounts/new" class="button btn-info">Перейти >></a>
                     </div>
                 </div>
             </div>
@@ -56,7 +54,7 @@
         <div class="small-12 small-centered clearfix">
             <div class="small-12 columns">
                 <div class="small-12 small-centered block-component">
-                    <h3>History</h3>
+                    <h3>Статистика</h3>
                     <div id="accountsPie" class="pie-chart-vendors">
 
                     </div>
