--- a/app/templates/pages/register.html
+++ b/app/templates/pages/register.html
@@ -20,8 +20,14 @@
             <div class="row">
                 <input id="passwordInput" type="password" placeholder="Enter your password"/>
             </div>
+            <div class="row">
+                <input id="dateInput" type="date" placeholder="Enter your date of birth"/>
+            </div>
+            <div class="row">
+                <input id="countryInput" type="text" placeholder="Enter your country"/>
+            </div>
             <div class="button-group">
-                <a href="javascript:void(0)" class="button btn-info expanded" on-click="login">Login</a>
+                <a href="javascript:void(0)" class="button btn-info expanded" on-click="login">Register</a>
             </div>
         </div>
     </div>
